// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingBreakdown customer transaction data matches snapshot 1`] = `
<div
  className="root"
>
  Array [
    <div
      className="lineItem"
    >
      <div
        className="bookingPeriod"
      >
        <div
          className="bookingPeriodSection"
        >
          <div
            className="dayLabel"
          >
            <span>
              BookingBreakdown.bookingStart
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 PM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
        <div
          className="bookingPeriodSectionRigth"
        >
          <div
            className="dayLabel"
          >
            <span>
              BookingBreakdown.bookingEnd
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 PM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr
      className="totalDivider"
    />,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        BookingBreakdown.baseUnitNight
      </span>
    </span>
    <span
      className="itemValue"
    >
      20
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="lineItemTotal"
    >
      <div
        className="totalLabel"
      >
        <span>
          BookingBreakdown.total
        </span>
      </div>
      <div
        className="totalPrice"
      >
        20
      </div>
    </div>,
  ]
</div>
`;

exports[`BookingBreakdown pretransaction data matches snapshot 1`] = `
<div
  className="root"
>
  Array [
    <div
      className="lineItem"
    >
      <div
        className="bookingPeriod"
      >
        <div
          className="bookingPeriodSection"
        >
          <div
            className="dayLabel"
          >
            <span>
              BookingBreakdown.bookingStart
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 PM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
        <div
          className="bookingPeriodSectionRigth"
        >
          <div
            className="dayLabel"
          >
            <span>
              BookingBreakdown.bookingEnd
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 PM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr
      className="totalDivider"
    />,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        BookingBreakdown.baseUnitNight
      </span>
    </span>
    <span
      className="itemValue"
    >
      20
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="lineItemTotal"
    >
      <div
        className="totalLabel"
      >
        <span>
          BookingBreakdown.total
        </span>
      </div>
      <div
        className="totalPrice"
      >
        20
      </div>
    </div>,
  ]
</div>
`;

exports[`BookingBreakdown provider canceled transaction data matches snapshot 1`] = `
<div
  className="root"
>
  Array [
    <div
      className="lineItem"
    >
      <div
        className="bookingPeriod"
      >
        <div
          className="bookingPeriodSection"
        >
          <div
            className="dayLabel"
          >
            <span>
              BookingBreakdown.bookingStart
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 PM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
        <div
          className="bookingPeriodSectionRigth"
        >
          <div
            className="dayLabel"
          >
            <span>
              BookingBreakdown.bookingEnd
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 PM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr
      className="totalDivider"
    />,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        BookingBreakdown.baseUnitNight
      </span>
    </span>
    <span
      className="itemValue"
    >
      20
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="subTotalLineItem"
    >
      <span
        className="itemLabel"
      >
        <span>
          BookingBreakdown.subTotal
        </span>
      </span>
      <span
        className="itemValue"
      >
        20
      </span>
    </div>,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        BookingBreakdown.refund
      </span>
    </span>
    <span
      className="itemValue"
    >
      -20
    </span>
  </div>
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        BookingBreakdown.commission
      </span>
    </span>
    <span
      className="itemValue"
    >
      -2
    </span>
  </div>
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        BookingBreakdown.refundProviderFee
      </span>
    </span>
    <span
      className="itemValue"
    >
      2
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="lineItemTotal"
    >
      <div
        className="totalLabel"
      >
        <span>
          BookingBreakdown.providerTotalCanceled
        </span>
      </div>
      <div
        className="totalPrice"
      >
        0
      </div>
    </div>,
  ]
  <span
    className="feeInfo"
  >
    <span>
      BookingBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;

exports[`BookingBreakdown provider transaction data matches snapshot 1`] = `
<div
  className="root"
>
  Array [
    <div
      className="lineItem"
    >
      <div
        className="bookingPeriod"
      >
        <div
          className="bookingPeriodSection"
        >
          <div
            className="dayLabel"
          >
            <span>
              BookingBreakdown.bookingStart
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 PM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
        <div
          className="bookingPeriodSectionRigth"
        >
          <div
            className="dayLabel"
          >
            <span>
              BookingBreakdown.bookingEnd
            </span>
          </div>
          <div
            className="dayInfo"
          >
            <span>
              Sat 12:00 PM
            </span>
          </div>
          <div
            className="itemLabel"
          >
            <span>
              Jun 10
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr
      className="totalDivider"
    />,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        BookingBreakdown.baseUnitNight
      </span>
    </span>
    <span
      className="itemValue"
    >
      20
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="subTotalLineItem"
    >
      <span
        className="itemLabel"
      >
        <span>
          BookingBreakdown.subTotal
        </span>
      </span>
      <span
        className="itemValue"
      >
        20
      </span>
    </div>,
  ]
  <div
    className="lineItem"
  >
    <span
      className="itemLabel"
    >
      <span>
        BookingBreakdown.commission
      </span>
    </span>
    <span
      className="itemValue"
    >
      -2
    </span>
  </div>
  Array [
    <hr
      className="totalDivider"
    />,
    <div
      className="lineItemTotal"
    >
      <div
        className="totalLabel"
      >
        <span>
          BookingBreakdown.providerTotalDefault
        </span>
      </div>
      <div
        className="totalPrice"
      >
        18
      </div>
    </div>,
  ]
  <span
    className="feeInfo"
  >
    <span>
      BookingBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;
